--- a/views/actor_form.html
+++ b/views/actor_form.html
@@ -1,4 +1,4 @@
-﻿<div class='row formCon'>
+<div class='row formCon'>
  <div class='twelve'>
     <h5>一些可以帮我们更了解您的问题，这些资料将会在客户挑中您或者我们向客户推荐您的时候用到，请如实填写：</h5>
     <div class='row panel'>
@@ -48,10 +48,10 @@
 		  <table width='100%'>
 		   <tr>
 		     <td width='50%'>
-		     	<label><input type='checkbox' name="language1" value="cn" checked /> 中文普通话 </label>
+		     	<label><input type='checkbox' name="language1" value="cn" checked /> <?=$lang_item['cn']?> </label>
 		     </td>
 		     <td width='50%'>
-		     	<label><input type='checkbox' name="language2" value="eng" /> 英语 </label>
+		     	<label><input type='checkbox' name="language2" value="en" /> <?=$lang_item['en']?> </label>
 		     </td>
 		   <tr>
 		  </table>	  
