--- a/views/footer.html
+++ b/views/footer.html
@@ -17,6 +17,13 @@
 </div>
 </footer>
 
+
+<script type="text/javascript">
+$(function () {
+	$("form").each(function(i,form_obj){$(form_obj).validate();});
+});
+</script>                
+
 <!-- Included JS Files (Compressed) -->
 <script src="/js/foundation.min.js"></script>
 <script src="/js/jquery.validate.js"></script>
