--- a/views/header.html
+++ b/views/header.html
@@ -32,9 +32,9 @@
       <dl class="sub-nav twelve">
         <dd class='navMic first-child'><a href="#"><i class="fa fa-microphone"></i></a></dd>
         <dd class='sepLine'></dd>
-        <dd><a href="#">首页</a></dd>
+        <dd><a href="/">首页</a></dd>
         <dd class='sepLine'></dd>
-        <dd><a href="#">上传文案</a></dd>
+        <dd><a href="<?=$this->config->item('url_create_project')?>">上传文案</a></dd>
         <dd class='sepLine'></dd>
         <dd><a href="#">配音试听</a></dd>
         <dd class='sepLine'></dd>
@@ -42,11 +42,11 @@
         <dd class='sepLine'></dd>
         <dd><a href="#">联系我们</a></dd>
         <dd class='sepLine'></dd>
-        <dd><a href="#">控制面板</a></dd>
+        <dd><a href="<?=$this->config->item('url_user_dashboard')?>">控制面板</a></dd>
         <dd class='sepLine'></dd>
         <dd><a href="#">我的收藏</a></dd>
         <dd class='sepLine'></dd>
-        <dd class='last-child'><a href="#">注册/登入</a></dd>
+        <dd class='last-child'><a href="<?=$this->config->item('url_login')?>">注册/登入</a></dd>
       </dl>
     </nav>
    </header>
