--- a/views/project_form.html
+++ b/views/project_form.html
@@ -22,10 +22,10 @@
            <div class="nine columns">
             <select name="ages_gender" required="required">
             	<option value="">请选择</option>
-							<option  value="1" /><?=$ages_item[1]?></option>
-							<?php foreach ($ages_item as $akey => $atext): ?>
+							<option  value="1" /><?=$lang['ages_item'][1]?></option>
+							<?php foreach ($lang['ages_item'] as $akey => $atext): ?>
 								<?php if ($akey == 1) continue ;?>
-								<?php foreach ($gender_item as $gkey => $gtext): ?>
+								<?php foreach ($lang['gender_item'] as $gkey => $gtext): ?>
 							<option  value="<?=$akey?>,<?=$gkey?>" /> <?=$atext?> <?=$gtext?> </option>
 								<?php endforeach; ?>
 							<?php endforeach; ?>
@@ -40,7 +40,7 @@
             <div class="row">
               <div class="six columns">
                 <select name="language">
-							   	<?php foreach ($lang_item as $gkey => $gtext): ?>
+							   	<?php foreach ($lang['lang_item'] as $gkey => $gtext): ?>
 							    <option  value="<?=$gkey?>" /> <?=$gtext?> </option>
 								<?php endforeach; ?>
                 </select>
@@ -85,7 +85,7 @@
             <label class="right inline">选择配音模式 * :
            </div>
            <div class="nine columns">
-             <label class="specialLabel2"><input type="radio" name="type" value="ks" /> 快速获得配音: <span>我们为您挑选最合适的配音师。</span></label>
+             <label class="specialLabel2"><input type="radio" name="type" value="sp" /> 快速获得配音: <span>我们为您挑选最合适的配音师。</span></label>
              <label class="specialLabel3"><input type="radio" name="type" value="st"/> 试听样音: <span>通过试听网站样音来选择配音师。</span></label>
              <p class="specialLabel3">
              	<label style="display:inline;"><input type="radio" name="type" value="jb" />
