--- a/views/choose.html
+++ b/views/choose.html
@@ -1,14 +1,12 @@
-<?=$lang['ages_item'][1]?>
-
 <div class="row formCon">
  <div class="twelve"> 	
     <h4 class="text-center">欢迎加入！ 请选择：</h4>
     <div class="row panel">
       <div class="six columns text-center">
-        <a href="<?=$this->config->item('url_actor_form')?>" class="button radius btLarge centered">我是配音师</a>
+        <a href="<?=$this->config->item('url_create_actor')?>" class="button radius btLarge centered">我是配音师</a>
       </div>
       <div class="six columns text-center">
-        <a href="<?=$this->config->item('url_project_form')?>" class="button radius btLarge centered">我是客户</a>
+        <a href="<?=$this->config->item('url_create_project')?>" class="button radius btLarge centered">我是客户</a>
       </div>      
     </div>
  </div>
