--- a/views/footer.html
+++ b/views/footer.html
@@ -19,10 +19,33 @@
 
 
 <script type="text/javascript">
+
+
+if (typeof($validate_rules)=="undefined"){
+	$validate_rules = {};
+}
+
+if (typeof($validate_messages)=="undefined"){
+	$validate_messages = {};
+}
+
 $(function () {
-	$("form").each(function(i,form_obj){$(form_obj).validate();});
+	$.validator.setDefaults({
+		//submitHandler: function() { alert("submitted!"); },
+	  errorPlacement: function(error, element) {
+	  	var container_id = '#' + element.attr("name")+ '_container';
+	  	if($(container_id).length > 0){
+	  		//alert(container_id); 出错信息加到name_container的容器中
+				error.appendTo($(container_id));
+	  	}else{
+	  		error.insertAfter(element);
+	 		}
+	  }
+	});
+
+	$("form").each(function(i,form_obj){$(form_obj).validate({rules:$validate_rules,messages:$validate_messages});});
 });
-</script>                
+</script>
 
 <!-- Included JS Files (Compressed) -->
 <script src="/js/foundation.min.js"></script>
