--- a/views/login.html
+++ b/views/login.html
@@ -1,104 +1,104 @@
 <div class="row formCon">
- <div class="twelve">
-    <dl class="tabs">
-      <dd><a href="#signUp">注册</a></dd>
-      <dd class="active"><a href="#login">登录</a></dd>
-    </dl>
-    <ul class="tabs-content">
-      <li class="active" id="loginTab">
-        <form id="form_login" action="" method="post">
-         <div class="panel">
+<div class="twelve">
+  <dl class="tabs">
+    <dd><a href="#signUp">注册</a></dd>
+    <dd class="active"><a href="#login">登录</a></dd>
+  </dl>
+  <ul class="tabs-content">
+    <li class="active" id="loginTab">
+      <form id="form_login" action="<?=$this->config->item("url_login")?>" method="post">
+       <div class="panel">
+         <div class="row">
+           <div class="three columns">
+            <label class="right inline">电子邮箱 * :
+           </div>
+           <div class="nine columns">
+             <input type="email" required="required" name="identity" autocomplete="on" autofocus="autofocus" />
+           </div>
+         </div>
+         <div class="row">
+           <div class="three columns">
+            <label class="right inline">密码 * :
+           </div>
+           <div class="nine columns">
+             <input type="password" required="required" name="password" maxlength="20" />
+           </div>
+         </div>
+       </div>
+       <div class="row">
+        <div class="twelve text-center">
+          <button type="submit" class="button radius btLarge centered">登入</button>
+          <br/><br/>
+          <a href="<?=$this->config->item('url_forgot_password')?>" style="margin-top:10px;margin-left:10px;">忘记密码?</a>
+        </div>
+       </div>
+       </form>
+    </li>
+
+    <li id="signUpTab">
+      <form id="form_signup" action="<?=$this->config->item("url_signup")?>" method="post">
+      <div class="panel">
            <div class="row">
              <div class="three columns">
               <label class="right inline">电子邮箱 * :
              </div>
              <div class="nine columns">
-               <input type="email" required="required" name="identity" autocomplete="on">
+               <input type="email" required="required" name="email" autofocus="autofocus" />
              </div>
            </div>
            <div class="row">
              <div class="three columns">
-              <label class="right inline">密码 * :
+              <label  class="right inline">密码 * :
              </div>
              <div class="nine columns">
-               <input type="password" required="required" name="password" >
+               <input type="password" required="required" name="password" minlength="6" maxlength="20" />
              </div>
            </div>
-         </div>
-         <div class="row">
+           <div class="row">
+             <div class="three columns">
+              <label class="right inline">QQ * :
+             </div>
+             <div class="nine columns">
+               <input type="text" required="required" name="qq" maxlength="11" />
+             </div>
+           </div>
+           <div class="row">
+             <div class="three columns">
+              <label class="right inline">个人名称 * :
+             </div>
+             <div class="nine columns">
+               <input type="text" required="required" name="first_name" maxlength="20" />
+             </div>
+           </div>
+           <div class="row">
+             <div class="three columns">
+              <label class="right inline">公司名称 :
+             </div>
+             <div class="nine columns">
+               <input type="text" name="company" maxlength="30" />
+             </div>
+           </div>
+           <div class="row">
+             <div class="three columns">
+              <label class="right inline">电话 :
+             </div>
+             <div class="nine columns">
+               <input type="text"  name="phone" maxlength="20" />
+             </div>
+           </div>
+       </div>
+       <div class="row">
           <div class="twelve text-center">
-            <button type="submit" class="button radius btLarge centered">登入</button>
-            <br/><br/>
-            <a href="<?=$this->config->item('url_forgot_password')?>" style="margin-top:10px;margin-left:10px;">忘记密码?</a>
+            <button type="submit" class="button radius btLarge centered">注册</button>
           </div>
-         </div>
-         </form>
-      </li>
-
-      <li id="signUpTab">
-        <form id="form_signup" action="<?=$this->config->item("url_create_actor")?>" method="post">
-        <div class="panel">
-             <div class="row">
-               <div class="three columns">
-                <label class="right inline">电子邮箱 * :
-               </div>
-               <div class="nine columns">
-                 <input type="email" required="required" name="email" autofocus="autofocus">
-               </div>
-             </div>
-             <div class="row">
-               <div class="three columns">
-                <label  class="right inline">密码 * :
-               </div>
-               <div class="nine columns">
-                 <input type="password" required="required" name="password">
-               </div>
-             </div>
-             <div class="row">
-               <div class="three columns">
-                <label class="right inline">QQ * :
-               </div>
-               <div class="nine columns">
-                 <input type="text" required="required" name="qq">
-               </div>
-             </div>
-             <div class="row">
-               <div class="three columns">
-                <label class="right inline">个人名称 * :
-               </div>
-               <div class="nine columns">
-                 <input type="text" required="required" name="first_name">
-               </div>
-             </div>
-             <div class="row">
-               <div class="three columns">
-                <label class="right inline">公司名称 :
-               </div>
-               <div class="nine columns">
-                 <input type="text" name="company">
-               </div>
-             </div>
-             <div class="row">
-               <div class="three columns">
-                <label class="right inline">电话 :
-               </div>
-               <div class="nine columns">
-                 <input type="text"  name="phone">
-               </div>
-             </div>
-         </div>
-         <div class="row">
-            <div class="twelve text-center">
-              <button type="submit" class="button radius btLarge centered">注册</button>
-            </div>
-        </div>
-        </form>
-        <div class="row">
-            <div calss="twelve">
-              <i>点击注册代表您已阅读并且同意以下的协议</i>
-              <div class="signUpTerms">
-               <p>
-	<strong>一、总则</strong><br />
+      </div>
+      </form>
+      <div class="row">
+          <div calss="twelve">
+            <i>点击注册代表您已阅读并且同意以下的协议</i>
+            <div class="signUpTerms">
+             <p>
+<strong>一、总则</strong><br />
 <br />
 1.1 “591配音网”是橙声音乐向用户提供的“配音录音”网络交易服务系统（以下简称“591配”或“本服务”）的中介服务。本协议由您本人和591配签订，本服务协议具有合同效力。<br />
 <br />
@@ -109,16 +109,16 @@
 1.4 用户确认本服务协议后，本服务协议即在用户和591配之间产生法律效力。请用户务必在注册之前认真阅读全部服务协议内容，如有任何疑问，可向591配咨询。①无论用户事实上是否在注册之前认真阅读了本服务协议，只要用户在出现本协议的网页上点击含有“确认”或“同意”字样的按钮，用户的行为仍然表示其同意并签署了本服务协议。②本协议不涉及用户与591配其它用户之间因网上交易而产生的法律关系及法律纠纷。
 </p>
 <p>
-	<strong>二、 定义</strong>
-	2.1 <br />
-	<br />
-	用户及用户注册：用户必须是具备完全民事行为能力的自然人，或者是具有合法经营资格的实体组织。无民事行为能力人、限制民事行为能力人以及无经营或特定经营资格的组织不当注册为591配用户或超过其民事权利或行为能力范围从事交易的，其与591配之间的服务协议自始无效，591配一经发现，有权立即注销该用户，并追究其使用“本服务”的一切法律责任。
+<strong>二、 定义</strong>
+2.1 <br />
+<br />
+用户及用户注册：用户必须是具备完全民事行为能力的自然人，或者是具有合法经营资格的实体组织。无民事行为能力人、限制民事行为能力人以及无经营或特定经营资格的组织不当注册为591配用户或超过其民事权利或行为能力范围从事交易的，其与591配之间的服务协议自始无效，591配一经发现，有权立即注销该用户，并追究其使用“本服务”的一切法律责任。
 </p>
 <p>
-	<strong>三、 用户权利和义务：</strong>
+<strong>三、 用户权利和义务：</strong>
 </p>
 <p>
-	3.1 用户有权利拥有自己在591配的用户名及交易密码，并有权利使用自己的用户名及密码随时登陆591配交易平台。用户不得以任何形式擅自转让或授权他人使用自己的591配用户名；<br />
+3.1 用户有权利拥有自己在591配的用户名及交易密码，并有权利使用自己的用户名及密码随时登陆591配交易平台。用户不得以任何形式擅自转让或授权他人使用自己的591配用户名；<br />
 <br />
 3.2 用户有权根据本服务协议的规定以及591配上发布的相关规则利用591配上交易平台查询交易信息、发布任务、提交服务简历、参加任务的竞标、与其它用户订立服务交易买卖合同、评价其它用户的信用、参加591配的有关活动以及有权享受591配提供的其它的有关信息服务； <br />
 <br />
@@ -141,13 +141,13 @@
 3.11 用户承诺在选择交易对象时，是经过自己选择的结果，应对自己选择的交易行为及后果负责，并承担可能由交易纠纷产生的经济损失；<br />
 <br />
 3.12
- 用户同意，在获得任务报酬后，其任务成交作品的知识产权已转移给任务发布者所有，未成交的工作者可自行处理；如交易双方日后因成交作品的知识产权产生的法律纠纷，用户将以自己的名义独立承担所有相应的法律责任和后果。
+用户同意，在获得任务报酬后，其任务成交作品的知识产权已转移给任务发布者所有，未成交的工作者可自行处理；如交易双方日后因成交作品的知识产权产生的法律纠纷，用户将以自己的名义独立承担所有相应的法律责任和后果。
 </p>
 <p>
-	<strong>四、591配的权利和义务：</strong>
+<strong>四、591配的权利和义务：</strong>
 </p>
 <p>
-	4.1 591配有义务在现有技术上维护整个网上交易平台的正常运行，并努力提升和改进技术，使用户网上交易活动得以顺利进行；<br />
+4.1 591配有义务在现有技术上维护整个网上交易平台的正常运行，并努力提升和改进技术，使用户网上交易活动得以顺利进行；<br />
 <br />
 4.2 对用户在注册使用591配上交易平台中所遇到的与交易资金有关的问题及反映的情况，591配应及时作出回复；<br />
 <br />
@@ -158,7 +158,7 @@
 ①用户或其它第三方通知591配，认为某个具体用户或具体交易事项可能存在重大问题；
 </p>
 <p>
-	②用户或其它第三方向591配告知交易平台上有违法或不当行为的，591配以普通非专业交易者的知识水平标准对相关内容进行判别，可以明显认为这些内容或行为具有违法或不当性质的；<br />
+②用户或其它第三方向591配告知交易平台上有违法或不当行为的，591配以普通非专业交易者的知识水平标准对相关内容进行判别，可以明显认为这些内容或行为具有违法或不当性质的；<br />
 <br />
 4.5 591配有权根据不同情况选择保留或删除相关信息或继续、停止对该用户提供服务，并追究相关法律责任。<br />
 <br />
@@ -179,84 +179,84 @@
 4.13 591配会在用户的计算机上设定或取用591配cookies。591配允许那些在591配网页上发布广告的公司到用户计算机上设定或取用 cookies 。在用户登录时获取数据，591配使用cookies可为用户用户提供个性化服务。如果拒绝所有 cookies，用户将不能使用需要登录的591配产品及服务内容。 <br />
 </p>
 <p>
-	<strong>五、服务的中断和终止：</strong>
+<strong>五、服务的中断和终止：</strong>
 </p>
 <p>
-	5.1 用户同意，在591配未向用户收取服务费的情况下，591配可自行全权决定以任何理由 (包括但不限于591配认为用户已违反本协议的字面意义和精神，或以不符合本协议的字面意义和精神的方式行事，或用户在超过180天的时间内未以用户的账号及密码登录网站等) 终止用户的“本服务”密码、账户 (或其任何部份) 或用户对“本服务”的使用，并删除（不再保存）用户在使用“本服务”中提交的任何资料。同时591配可自行全权决定，在发出通知或不发出通知的情况下，随时停止提供“本服务”或其任何部份。账号终止后，591配没有义务为用户保留原账号中或与之相关的任何信息，或转发任何未曾阅读或发送的信息给用户或第三方。此外，用户同意，591配不就终止用户接入“本服务”而对用户或任何第三者承担任何责任；<br />
+5.1 用户同意，在591配未向用户收取服务费的情况下，591配可自行全权决定以任何理由 (包括但不限于591配认为用户已违反本协议的字面意义和精神，或以不符合本协议的字面意义和精神的方式行事，或用户在超过180天的时间内未以用户的账号及密码登录网站等) 终止用户的“本服务”密码、账户 (或其任何部份) 或用户对“本服务”的使用，并删除（不再保存）用户在使用“本服务”中提交的任何资料。同时591配可自行全权决定，在发出通知或不发出通知的情况下，随时停止提供“本服务”或其任何部份。账号终止后，591配没有义务为用户保留原账号中或与之相关的任何信息，或转发任何未曾阅读或发送的信息给用户或第三方。此外，用户同意，591配不就终止用户接入“本服务”而对用户或任何第三者承担任何责任；<br />
 <br />
 5.2 如用户向591配提出注销591配注册用户身份时，经591配审核同意，由591配注销该注册用户，用户即解除与591配的服务协议关系。但注销该用户账号后，591配仍保留下列权利： <br />
 <br />
 ①用户注销后，591配有权保留该用户的注册数据及以前的交易行为记录。
 </p>
 <p>
-	②用户注销后，如用户在注销前在591配交易平台上存在违法行为或违反合同的行为，591配仍可行使本服务协议所规定的权利；<br />
+②用户注销后，如用户在注销前在591配交易平台上存在违法行为或违反合同的行为，591配仍可行使本服务协议所规定的权利；<br />
 <br />
 5.3 在下列情况下，591配可以通过注销用户的方式终止服务：<br />
 <br />
 ①在用户违反本服务协议相关规定时，591配有权终止向该用户提供服务。591配将在中断服务时通知用户。但如该用户在被591配终止提供服务后，再一次直接或间接或以他人名义注册为591配用户的，591配有权再次单方面终止向该用户提供服务；
 </p>
 <p>
-	②如591配通过用户提供的信息与用户联系时，发现用户在注册时填写的电子邮箱已不存在或无法接收电子邮件的，经591配以其它联系方式通知用户更改，而用户在三个工作日内仍未能提供新的电子邮箱地址的，591配有权终止向该用户提供服务；
+②如591配通过用户提供的信息与用户联系时，发现用户在注册时填写的电子邮箱已不存在或无法接收电子邮件的，经591配以其它联系方式通知用户更改，而用户在三个工作日内仍未能提供新的电子邮箱地址的，591配有权终止向该用户提供服务；
 </p>
 <p>
-	③一旦591配发现用户注册数据中主要内容是虚假的，591配有权随时终止向该用户提供服务；
+③一旦591配发现用户注册数据中主要内容是虚假的，591配有权随时终止向该用户提供服务；
 </p>
 <p>
-	④本服务协议终止或更新时，用户明示不愿接受新的服务协议的；
+④本服务协议终止或更新时，用户明示不愿接受新的服务协议的；
 </p>
 <p>
-	⑤其它591配认为需终止服务的情况。<br />
+⑤其它591配认为需终止服务的情况。<br />
 <br />
 5.4 服务中断、终止之前用户交易行为的处理因用户违反法律法规或者违反服务协议规定而致使591配中断、终止对用户服务的，对于服务中断、终止之前用户交易行为依下列原则处理：<br />
 <br />
 ①服务中断、终止之前，用户已经上传至591配的文件尚未交易或尚未交易完成的，591配有权在中断、终止服务的同时删除文件或与交易相关的信息；
 </p>
 <p>
-	②服务中断、终止之前，用户已经就其它用户发布的任务作出要约，但交易尚未结束，591配有权在中断或终止服务的同时删除该用户的相关要约；
+②服务中断、终止之前，用户已经就其它用户发布的任务作出要约，但交易尚未结束，591配有权在中断或终止服务的同时删除该用户的相关要约；
 </p>
 <p>
-	③服务中断、终止之前，用户已经与另一用户就具体交易达成一致，591配可以不删除该项交易，但591配有权在中断、终止服务的同时将用户被中断或终止服务的情况通知用户的交易对方。
+③服务中断、终止之前，用户已经与另一用户就具体交易达成一致，591配可以不删除该项交易，但591配有权在中断、终止服务的同时将用户被中断或终止服务的情况通知用户的交易对方。
 </p>
 <p>
-	<strong>六、责任范围：</strong>
+<strong>六、责任范围：</strong>
 </p>
 <p>
-	6.1 用户明确理解和同意，591配不对因下述任一情况而导致的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 (无论591配是否已被告知该等损害赔偿的可能性)：<br />
+6.1 用户明确理解和同意，591配不对因下述任一情况而导致的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 (无论591配是否已被告知该等损害赔偿的可能性)：<br />
 <br />
 ①使用或未能使用“本服务”；
 </p>
 <p>
-	②第三方未经批准的接入或第三方更改用户的传输数据或数据；
+②第三方未经批准的接入或第三方更改用户的传输数据或数据；
 </p>
 <p>
-	③第三方对“本服务”的声明或关于“本服务”的行为；或非因591配的原因而引起的与“本服务”有关的任何其它事宜，包括疏忽。用户明确理解并同意，如因其违反有关法律或者本协议之规定，使591配遭受任何损失，受到任何第三方的索赔，或任何行政管理部门的处罚，用户应对591配提供补偿，包括合理的律师费用。
+③第三方对“本服务”的声明或关于“本服务”的行为；或非因591配的原因而引起的与“本服务”有关的任何其它事宜，包括疏忽。用户明确理解并同意，如因其违反有关法律或者本协议之规定，使591配遭受任何损失，受到任何第三方的索赔，或任何行政管理部门的处罚，用户应对591配提供补偿，包括合理的律师费用。
 </p>
 <p>
-	<strong>七、隐私权政策：</strong>
+<strong>七、隐私权政策：</strong>
 </p>
 <p>
-	7.1 适用范围：<br />
+7.1 适用范围：<br />
 <br />
 ①在用户注册591配账户或者支付派账户时，用户根据591配要求提供的个人注册信息；
 </p>
 <p>
-	②在用户使用591配服务，参加591配活动，或访问591配网页时，591配自动接收并记录的用户浏览器上的服务器数值，包括但不限于IP地址等数据及用户要求取用的网页记录；
+②在用户使用591配服务，参加591配活动，或访问591配网页时，591配自动接收并记录的用户浏览器上的服务器数值，包括但不限于IP地址等数据及用户要求取用的网页记录；
 </p>
 <p>
-	③591配收集到的用户在591配进行交易的有关数据，包括但不限于出价、购买、上传文件、信用评价及违规记录；
+③591配收集到的用户在591配进行交易的有关数据，包括但不限于出价、购买、上传文件、信用评价及违规记录；
 </p>
 <p>
-	④591配通过合法途径从商业伙伴处取得的用户个人数据。<br />
+④591配通过合法途径从商业伙伴处取得的用户个人数据。<br />
 <br />
 7.2 信息使用： <br />
 <br />
 ①591配不会向任何人出售或出借用户的个人信息，除非事先得到用户得许可。
 </p>
 <p>
-	②591配亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播用户的个人信息。任何用户如从事上述活动，一经发现，591配有权立即终止与该用户的服务协议，查封其账号。
+②591配亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播用户的个人信息。任何用户如从事上述活动，一经发现，591配有权立即终止与该用户的服务协议，查封其账号。
 </p>
 <p>
-	③为服务用户的目的，591配可能通过使用用户的个人信息，向用户提供服务，包括但不限于向用户发出产品和服务信息，或者与591配合作伙伴共享信息以便他们向用户发送有关其产品和服务的信息。<br />
+③为服务用户的目的，591配可能通过使用用户的个人信息，向用户提供服务，包括但不限于向用户发出产品和服务信息，或者与591配合作伙伴共享信息以便他们向用户发送有关其产品和服务的信息。<br />
 <br />
 7.3 信息披露：<br />
 <br />
@@ -265,22 +265,22 @@
 ①经用户同意，向第三方披露；
 </p>
 <p>
-	②如用户是知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；
+②如用户是知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；
 </p>
 <p>
-	③根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；
+③根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；
 </p>
 <p>
-	④如果用户出现违反中国有关法律或者网站政策的情况，需要向第三方披露；
+④如果用户出现违反中国有关法律或者网站政策的情况，需要向第三方披露；
 </p>
 <p>
-	⑤为提供您所要求的产品和服务，而必须和第三方分享用户的个人信息；
+⑤为提供您所要求的产品和服务，而必须和第三方分享用户的个人信息；
 </p>
 <p>
-	⑥其它591配根据法律或者网站政策认为合适的披露；
+⑥其它591配根据法律或者网站政策认为合适的披露；
 </p>
 <p>
-	⑦在591配上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的， 591配有全权可以决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。<br />
+⑦在591配上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的， 591配有全权可以决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。<br />
 <br />
 7.4 信息安全： <br />
 <br />
@@ -291,18 +291,18 @@
 <br />
 ①通过591配所设Cookie所取得的有关信息，将适用本政策；
 <p>
-	<br />
+<br />
 </p>
 <p>
-	②在591配上发布广告的公司通过广告在用户计算机上设定的Cookies，将按其自己的隐私权政策使用。<br />
+②在591配上发布广告的公司通过广告在用户计算机上设定的Cookies，将按其自己的隐私权政策使用。<br />
 <br />
 7.6 编辑和删除个人信息的权限： 用户可以点击我的591配对用户的个人信息进行编辑和删除，除非591配另有规定。
 </p>
 <p>
-	<strong>八、其他</strong>
+<strong>八、其他</strong>
 <br /><br />
-	8.1 本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。<br />
-	<br />
+8.1 本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。<br />
+<br />
 8.2 如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向591配所属公司经营所在地的上海市人民法院提起诉讼。<br />
 <br />
 8.3 591配未行使或执行本服务协议任何权利或规定，不构成对前述权利或权利之放弃。<br />
@@ -313,10 +313,24 @@
 </p>
 
 
-               </div>
-            </div>
-         </div>
-      </li>
-    </ul>
- </div>
+             </div>
+          </div>
+       </div>
+    </li>
+  </ul>
 </div>
+</div>
+
+<script type="text/javascript">
+	var	$validate_rules = {
+			qq: "digits",			
+			phone: "digits",
+			topic: {
+				required: "#newsletter:checked",
+				minlength: 2
+			},
+		};
+	var	$validate_messages ={
+			password: "请输入6位以上的密码",
+		};
+</script>
