--- a/views/project_form.html
+++ b/views/project_form.html
@@ -39,7 +39,7 @@
            <div class="nine columns">
             <div class="row">
               <div class="six columns">
-                <select name="language">
+                <select name="language" required="required">
 							   	<?php foreach ($lang['lang_item'] as $gkey => $gtext): ?>
 							    <option  value="<?=$gkey?>" /> <?=$gtext?> </option>
 								<?php endforeach; ?>
@@ -75,20 +75,21 @@
            <div class="three columns">
             <label class="right inline">是否需要配乐或音效 * :
            </div>
-           <div class="nine columns">
-             <label class="specialLabel1"><input type="radio" name="need_music" value="1" /> 需要</label>
-             <label class="specialLabel1"><input type="radio" name="need_music" value="0" checked="checked" /> 不需要</label>
+           <div class="nine columns" id="need_music_container">
+             <label class="specialLabel1"><input type="radio" name="need_music" value="1" required="required" /> 需要</label>
+             <label class="specialLabel1"><input type="radio" name="need_music" value="0"  required="required" /> 不需要</label>
            </div>
+
          </div>
          <div class="row">
            <div class="three columns">
             <label class="right inline">选择配音模式 * :
            </div>
-           <div class="nine columns">
-             <label class="specialLabel2"><input type="radio" name="type" value="sp" /> 快速获得配音: <span>我们为您挑选最合适的配音师。</span></label>
-             <label class="specialLabel3"><input type="radio" name="type" value="st"/> 试听样音: <span>通过试听网站样音来选择配音师。</span></label>
+           <div class="nine columns" id="type_container">
+             <label class="specialLabel2"><input type="radio" name="type" value="sp" required="required" /> 快速获得配音: <span>我们为您挑选最合适的配音师。</span></label>
+             <label class="specialLabel3"><input type="radio" name="type" value="st" required="required" /> 试听样音: <span>通过试听网站样音来选择配音师。</span></label>
              <p class="specialLabel3">
-             	<label style="display:inline;"><input type="radio" name="type" value="jb" />
+             	<label style="display:inline;"><input type="radio" name="type" value="jb" required="required" />
               配音文案竞标: <span>通过配音竞标来选择配音师。</span></label>
               <select name="actor_count" style="display:inline; width:60px;">
                 <option value="2">2</option>
@@ -98,10 +99,15 @@
               </select>
               位
              </p>
-             <div class="uploadPs">
+           </div>
+         </div>
+				 <div class="row">
+				 	<div class="three columns"></div>
+           <div class="nine columns">
+         		<div class="uploadPs">
                <p><a href="#">如果您有特别的要求或者其它方案，请与我们联系</a></p>
              </div>
-           </div>
+						</div>
          </div>
          <br/><br/>
          <div class="row">
