--- a/views/dashboard_user.html
+++ b/views/dashboard_user.html
@@ -6,11 +6,11 @@
       <dd><a href="#peiyinshi">我是配音师</a></dd>
     </dl>
     <ul class="tabs-content">
-      <li class="active" id="customerTab">        
+      <li class="active" id="customerTab">
         <div data-alert class="alert-box warning radius">
           您尚未开通“客户功能”， 如需开通， <a href="#">点这里</a>
         </div>
-        
+
         <div class="panel">
           <dl class="sub-nav">
             <dd><a href="#">收藏的样音</a></dd>
@@ -37,24 +37,24 @@
             <tbody>
 							<?php foreach ($projects as $project):?>
               <tr>
-                <td class="text-center"> <span class="label success round"><?=$project->title?></span></td>
-                <td><a href="#"><?=$lang['project_type'][$project->type]?></a></td>
+                <td class="text-center"> <span class="label success round"><?=$lang['project_type'][$project->type]?></span></td>
+                <td><a href="#"><?=$project->title?></a></td>
                 <td class="text-center"><a href="#" class="button small radius"><?=$lang['project_status'][$project->status]?></a></td>
                 <td class="text-center"><a href="#" class="button small alert radius"><i class="fa fa-trash-o"></i> 删除</a></td>
               </tr>
 							<?php endforeach;?>
               <tr>
             </tbody>
-          </table>          
+          </table>
          </div>
       </li>
-      
-      
-      
-      
+
+
+
+
       <li id="peiyinshiTab" style="display:none;">
         <div data-alert class="alert-box warning radius">
-          您尚未开通“配音师功能”， 如需开通， <a href="#">点这里</a>          
+          您尚未开通“配音师功能”， 如需开通， <a href="#">点这里</a>
         </div>
          <div class="panel">
           <dl class="sub-nav">
@@ -106,7 +106,7 @@
               <a href="#" style="margin-top:10px;margin-left:10px;">忘记密码?</a>
             </div>
          </div>
-      </li>         
+      </li>
     </ul>
  </div>
 </div>
