--- a/views/project_form.html
+++ b/views/project_form.html
@@ -1,4 +1,4 @@
-<div class="row formCon">
+﻿<div class="row formCon">
  <div class="twelve">
     <h4>上传文案</h4>
     <!-- h5 class="cOrange underLine">工作流程</h5 -->
@@ -9,7 +9,7 @@
       <form method="POST">
          <div class="row">
            <div class="three columns">
-            <label class="right inline">文案名称 * :
+            <label class="right inline">文案名称 * :</label>
            </div>
            <div class="nine columns">
             <input type="text" name="title" maxlength="50" required="required"  autofocus="autofocus" />
@@ -17,7 +17,7 @@
          </div>
          <div class="row">
            <div class="three columns">
-            <label class="right inline">配音的年龄和性别 * :
+            <label class="right inline">配音的年龄和性别 * :</label>
            </div>
            <div class="nine columns">
             <select name="ages_gender" required="required">
@@ -34,7 +34,7 @@
          </div>
          <div class="row">
            <div class="three columns">
-            <label class="right inline">语种 :
+            <label class="right inline">语种 :</label>
            </div>
            <div class="nine columns">
             <div class="row">
@@ -50,7 +50,7 @@
          </div>
          <div class="row">
            <div class="three columns">
-            <label class="right inline">文案内容 * :
+            <label class="right inline">文案内容 * :</label>
            </div>
            <div class="nine columns">
              <textarea style="height:250px;" name="content" required="required"></textarea>
@@ -58,7 +58,7 @@
          </div>
          <div class="row">
            <div class="three columns">
-            <label class="right inline" style="line-height:22px;">备注 * :
+            <label class="right inline" style="line-height:22px;">备注 * :</label>
            </div>
            <div class="nine columns">
              <div class="uploadPs">
@@ -73,7 +73,7 @@
          </div>
          <div class="row">
            <div class="three columns">
-            <label class="right inline">是否需要配乐或音效 * :
+            <label class="right inline">是否需要配乐或音效 * :</label>
            </div>
            <div class="nine columns" id="need_music_container">
              <label class="specialLabel1"><input type="radio" name="need_music" value="1" required="required" /> 需要</label>
@@ -83,13 +83,13 @@
          </div>
          <div class="row">
            <div class="three columns">
-            <label class="right inline">选择配音模式 * :
+            <label class="right inline">选择配音模式 * :</label>
            </div>
            <div class="nine columns" id="type_container">
              <label class="specialLabel2"><input type="radio" name="type" value="sp" required="required" /> 快速获得配音: <span>我们为您挑选最合适的配音师。</span></label>
              <label class="specialLabel3"><input type="radio" name="type" value="st" required="required" /> 试听样音: <span>通过试听网站样音来选择配音师。</span></label>
              <p class="specialLabel3">
-             	<label style="display:inline;"><input type="radio" name="type" value="jb" required="required" />
+             	<label style="display:inline;"><input type="radio" name="type" value="jb" required="required">
               配音文案竞标: <span>通过配音竞标来选择配音师。</span></label>
               <select name="actor_count" style="display:inline; width:60px;">
                 <option value="2">2</option>
